# sun2000_modbus

./: .editorconfig  .gitignore  LEGAL  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: build.yml  publish.yml
helpers/doc-generator/: main.py
helpers/register-parser/: register-parser.ipynb  requirements.txt
main/: datatypes.py  registers.py  sun2000_modbus.py
register-parser/: register-parser.ipynb  requirements.txt
sun2000_modbus/: __init__.py  datatypes.py  inverter.py  mappings.py  registers.py  sun2000_modbus.py
tests/: context.py  sun2000mock.py  test_datatypes.py  test_sun2000_modbus.py
