[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sun2000_modbus"
authors = [{name = "Oliver Gregorius", email = "oliver@gregorius.dev"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
requires-python = ">=3.6"
keywords = ["sun2000", "modbus", "photovoltaic"]
dependencies = [
    "pymodbus==2.5.3",
]

[project.urls]
Home = "https://github.com/olivergregorius/sun2000-modbus"
