[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sun2000_modbus"
authors = [{name = "Oliver Gregorius", email = "oliver@gregorius.dev"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version", "description"]
requires-python = ">=3.10"
keywords = ["sun2000", "modbus", "photovoltaic"]
dependencies = [
    "pymodbus==2.5.3",
]

[project.urls]
Source = "https://github.com/olivergregorius/sun2000_modbus"
